--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "moment": "^2.29.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.6.2",
+    "react-scripts": "5.0.1",
     "web-vitals": "^1.0.1",
     "zustand": "^4.3.2"
   },
